--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.10",
     "email-validator": "^2.0.4",
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "pg": "^8.11.5"
   },
