--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "email-validator": "^2.0.4",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
