Connexion to the database successful

--- a/.env_sample
+++ b/.env_sample
@@ -1,2 +1,2 @@
-PORT=5000
-DATABASE_URL=postgresql://projet:projet@localhost:5432/projet
+PORT=3000
+DATABASE_URL=postgres://projet:projet@localhost:5432/projet
