--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "nodemonConfig": {
+    "ext": "js, mjs, cjs, json, css"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -21,6 +24,7 @@
     "helmet": "^7.1.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
+    "swiper": "^11.1.3",
     "winston": "^3.13.0"
   },
   "devDependencies": {
