--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^7.1.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
+    "serve-favicon": "^2.5.0",
     "winston": "^3.13.0"
   },
   "devDependencies": {
