--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "projet",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "npx nodemon"
   },
